home, cart and shipping pages implemented

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -37,37 +37,37 @@ a {
 @import "admin/dashboardapp";
 @import "admin/mediaquery";
 
-.header{
-  background-color: green;
+// .header{
+//   background-color: green;
 
-}
+// }
 
-.flex{
-  display: flex;
-}
+// .flex{
+//   display: flex;
+// }
 
-.nav-container{
-  display: flex;
-  align-items: stretch;
-  padding:.25rem 0;
+// .nav-container{
+//   display: flex;
+//   align-items: stretch;
+//   padding:.25rem 0;
 
-}
+// }
 
-.container{
-  max-width: 90%;
-  margin: 0 auto
-}
+// .container{
+//   max-width: 90%;
+//   margin: 0 auto
+// }
 
-.home-link{
-  margin: 0 0 0 auto;
-}
+// .home-link{
+//   margin: 0 0 0 auto;
+// }
 
-.header-links{
-  margin: 0 0 0 auto;
-  // display: inline-block;
-  width: max-content;
-  background-color: red
-}
+// .header-links{
+//   margin: 0 0 0 auto;
+//   // display: inline-block;
+//   width: max-content;
+//   background-color: red
+// }
 
 
 
