--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -50,27 +49,25 @@
   }
 }
 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+@layer utilities {
+  .custom-container {
+    /* max-width: 1400px;
+      width: 90%; */
+    max-width: 3000px;
+    width: 93%;
+    margin: 0 auto;
   }
 
-  @layer utilities{
-    .custom-container{
-      max-width: 1400px;
-      width: 90%;
-      margin: 0 auto;
-    }
-
-    .no-scrollbar::-webkit-scrollbar{
-      display: none;
-    }
-
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
-
-  
+}
